--- a/app/src/main/res/layout/fragment_add_bank_account.xml
+++ b/app/src/main/res/layout/fragment_add_bank_account.xml
@@ -135,40 +135,40 @@
                 app:layout_constraintTop_toBottomOf="@id/tvReAccountNo" />
 
 
-           <!-- <TextView
-                android:id="@+id/tvBreach"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_space"
-                android:text="@string/breach_name"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:textColor="@color/black"
-                app:layout_constraintHorizontal_weight="1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/edtReAccountNo" />
+            <!-- <TextView
+                 android:id="@+id/tvBreach"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_marginTop="@dimen/default_space"
+                 android:text="@string/breach_name"
+                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                 android:textColor="@color/black"
+                 app:layout_constraintHorizontal_weight="1"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toBottomOf="@id/edtReAccountNo" />
 
-            <EditText
-                android:id="@+id/edtBreach"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/space_4"
-                android:layout_marginEnd="@dimen/space_4"
-                android:background="@drawable/shape_edt_gray_round"
-                android:hint="@string/breach_name"
-                android:inputType="textCapSentences"
-                android:maxLines="1"
-                android:paddingStart="@dimen/default_space"
-                android:paddingTop="@dimen/space_8"
-                android:paddingEnd="@dimen/default_space"
-                android:paddingBottom="@dimen/space_8"
-                android:text="@={vm.breachName}"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="@color/black"
-                android:textColorHint="@color/darker_gray"
-                app:layout_constraintEnd_toStartOf="@id/edtLName"
-                app:layout_constraintHorizontal_weight="1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvBreach" />-->
+             <EditText
+                 android:id="@+id/edtBreach"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_marginTop="@dimen/space_4"
+                 android:layout_marginEnd="@dimen/space_4"
+                 android:background="@drawable/shape_edt_gray_round"
+                 android:hint="@string/breach_name"
+                 android:inputType="textCapSentences"
+                 android:maxLines="1"
+                 android:paddingStart="@dimen/default_space"
+                 android:paddingTop="@dimen/space_8"
+                 android:paddingEnd="@dimen/default_space"
+                 android:paddingBottom="@dimen/space_8"
+                 android:text="@={vm.breachName}"
+                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                 android:textColor="@color/black"
+                 android:textColorHint="@color/darker_gray"
+                 app:layout_constraintEnd_toStartOf="@id/edtLName"
+                 app:layout_constraintHorizontal_weight="1"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toBottomOf="@id/tvBreach" />-->
 
 
             <TextView
@@ -231,6 +231,7 @@
                 android:background="@drawable/shape_edt_gray_round"
                 android:hint="@string/ifsc_code"
                 android:inputType="textCapCharacters"
+                android:maxLength="11"
                 android:maxLines="1"
                 android:paddingStart="@dimen/default_space"
                 android:paddingTop="@dimen/space_8"
