--- a/app/src/main/res/layout/row_third_level_investment.xml
+++ b/app/src/main/res/layout/row_third_level_investment.xml
@@ -36,12 +36,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:maxLines="2"
             android:minLines="2"
             android:text="@{widget.categoryName}"
             android:textColor="@color/semi_black"
             android:textSize="@dimen/sp10"
+            android:textAllCaps="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivItem"
             tools:text="Very Long Term Investments" />
