--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -22,6 +22,104 @@
             android:layout_margin="@dimen/default_space"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:id="@+id/ll_complete_verification"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/default_space"
+                android:background="@drawable/bg_complete_verification"
+                android:elevation="2dp"
+                android:orientation="horizontal"
+                android:padding="@dimen/space_16">
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:elevation="12dp"
+                    app:cardBackgroundColor="@color/circular_bg"
+                    app:cardCornerRadius="30dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:adjustViewBounds="true"
+                        android:padding="@dimen/space_12"
+                        android:src="@drawable/ic_complete_verification"
+                        tools:src="@drawable/ic_complete_verification" />
+
+                </android.support.v7.widget.CardView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/space_16"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/lato_semibold"
+                        android:text="Complete Registration"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textColor="@color/white" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/space_4"
+                        android:fontFamily="@font/lato_semibold"
+                        android:text="Hi there! register your KYC and bank account to start investing today."
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        android:textColor="@color/white" />
+
+                    <LinearLayout
+                        android:layout_marginTop="@dimen/space_12"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <EditText
+                            android:layout_weight="0.7"
+                            android:id="@+id/edtPanNo"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/shape_edt_verifcation"
+                            android:hint="Enter your PAN"
+                            android:inputType="textCapCharacters"
+                            android:maxLines="1"
+                            android:imeOptions="actionDone"
+                            android:paddingStart="@dimen/space_8"
+                            android:gravity="center_vertical"
+                            android:layout_gravity="center_vertical"
+                            android:paddingTop="@dimen/space_8"
+                            android:paddingEnd="@dimen/space_8"
+                            android:paddingBottom="@dimen/space_8"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                            android:textColor="@color/black"/>
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.3"
+                            android:text="Next"
+                            android:paddingTop="@dimen/space_8"
+                            android:paddingEnd="@dimen/space_8"
+                            android:paddingBottom="@dimen/space_8"
+                            android:paddingStart="@dimen/space_8"
+                            android:gravity="center"
+                            android:layout_gravity="center"
+                            android:textColor="@color/white"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                            android:background="@drawable/shape_btn_verification" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -66,7 +164,6 @@
 
             </android.support.constraint.ConstraintLayout>
 
-
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -75,7 +172,6 @@
                 android:elevation="@dimen/space_2"
                 android:padding="@dimen/space_8"
                 android:visibility="@{vm.logoutVisibility}">
-
 
                 <ImageView
                     android:id="@+id/ivBankAccount"
@@ -132,7 +228,6 @@
                     tools:text="@string/bank_mandate" />
 
             </android.support.constraint.ConstraintLayout>
-
 
             <FrameLayout
                 android:layout_width="match_parent"
