--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,7 +24,6 @@
             android:fillViewport="true"
             tools:context=".module.home.HomeFragment">
 
-
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -189,6 +188,117 @@
                     app:layout_constraintTop_toBottomOf="@+id/tvTotalReturnValue" />
 
                 <LinearLayout
+                    android:id="@+id/ll_complete_verification"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/default_space"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:layout_marginEnd="@dimen/default_space"
+                    android:background="@drawable/bg_pan_verification"
+                    android:elevation="2dp"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/space_16"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/homeView">
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:elevation="12dp"
+                        app:cardBackgroundColor="@color/circular_bg"
+                        app:cardCornerRadius="30dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent">
+
+                        <ImageView
+                            android:padding="@dimen/space_12"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:adjustViewBounds="true"
+                            android:src="@drawable/ic_pan_verification"
+                            tools:src="@drawable/ic_pan_verification" />
+
+                    </android.support.v7.widget.CardView>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/space_16"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/lato_semibold"
+                            android:text="Find Out"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                            android:textColor="@color/white" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/space_4"
+                            android:fontFamily="@font/lato_semibold"
+                            android:text="If You Are Ready to Invest?"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                            android:textColor="@color/white" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/space_4"
+                            android:text="It takes less than a minute."
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                            android:textColor="@color/white" />
+
+                        <LinearLayout
+                            android:layout_marginTop="@dimen/space_12"
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <EditText
+                                android:layout_weight="0.7"
+                                android:id="@+id/edtPanNo"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:background="@drawable/shape_edt_verifcation"
+                                android:hint="Enter your PAN"
+                                android:inputType="textCapCharacters"
+                                android:maxLines="1"
+                                android:imeOptions="actionDone"
+                                android:paddingStart="@dimen/space_8"
+                                android:gravity="center_vertical"
+                                android:layout_gravity="center_vertical"
+                                android:paddingTop="@dimen/space_8"
+                                android:paddingEnd="@dimen/space_8"
+                                android:paddingBottom="@dimen/space_8"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                                android:textColor="@color/black"/>
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0.3"
+                                android:text="Check Now"
+                                android:paddingTop="@dimen/space_8"
+                                android:paddingEnd="@dimen/space_8"
+                                android:paddingBottom="@dimen/space_8"
+                                android:paddingStart="@dimen/space_8"
+                                android:gravity="center"
+                                android:layout_gravity="center"
+                                android:textColor="@color/white"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                                android:background="@drawable/shape_btn_verification" />
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:id="@+id/llWhyTarrakki"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -201,7 +311,7 @@
                     android:padding="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/homeView">
+                    app:layout_constraintTop_toBottomOf="@+id/ll_complete_verification">
 
                     <TextView
                         android:id="@+id/tvWhyTarrakkii"
