--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -226,6 +226,16 @@
 
             </LinearLayout>
 
+            <TextView
+                android:id="@+id/txt_fund_offer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tap_here_to_see_the_fund_offer_document"
+                android:layout_marginTop="@dimen/space_16"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="@color/item_selected_color"
+                app:layout_constraintStart_toStartOf="parent" />
+
             <Button
                 android:id="@+id/btn_invest_now"
                 android:layout_width="match_parent"
