--- a/app/src/main/res/layout/row_saved_goal_list_item.xml
+++ b/app/src/main/res/layout/row_saved_goal_list_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="goal"
-            type="com.tarrakki.module.savedgoals.SavedGoal" />
+            type="com.tarrakki.api.model.GoalSavedResponse.Data" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -22,7 +22,7 @@
 
         <ImageView
             android:id="@+id/ivItem"
-            imgUrl="@{goal.imgRes}"
+            imgUrl="@{goal.goalDetails.goalImage}"
             android:layout_width="88dp"
             android:layout_height="88dp"
             android:adjustViewBounds="true"
@@ -45,7 +45,7 @@
             android:fontFamily="@font/lato_semibold"
             android:maxLines="1"
             android:minLines="1"
-            android:text="@{goal.name}"
+            android:text="@{goal.goalDetails.goal}"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/item_selected_color"
@@ -97,7 +97,7 @@
 
         <TextView
             android:id="@+id/tvAmount"
-            price="@{goal.amount}"
+            price="@{goal.fv}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato_semibold"
@@ -141,7 +141,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato_semibold"
-            android:text="@{goal.duration}"
+            android:text='@{goal.n+" Years"}'
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/semi_black"
             app:layout_constraintStart_toStartOf="@id/tvDurationsL"
