1: Implemented Check PAN card status api for E-KYC. 2: Implemented introduction screen for E-KYC.

--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -75,44 +75,48 @@
                         android:textColor="@color/white" />
 
                     <LinearLayout
-                        android:layout_marginTop="@dimen/space_12"
-                        android:orientation="horizontal"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/space_12"
+                        android:orientation="horizontal">
 
                         <EditText
-                            android:layout_weight="0.7"
                             android:id="@+id/edtPanNo"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/shape_edt_verifcation"
-                            android:hint="Enter your PAN"
-                            android:inputType="textCapCharacters"
-                            android:maxLines="1"
-                            android:imeOptions="actionDone"
-                            android:paddingStart="@dimen/space_8"
-                            android:gravity="center_vertical"
                             android:layout_gravity="center_vertical"
+                            android:layout_weight="0.7"
+                            android:background="@drawable/shape_edt_verifcation"
+                            android:gravity="center_vertical"
+                            android:hint="Enter your PAN"
+                            android:imeOptions="actionDone"
+                            android:inputType="textCapCharacters"
+                            android:maxLength="10"
+                            android:maxLines="1"
+                            android:text="AJTPG6148B"
+                            android:paddingStart="@dimen/space_8"
                             android:paddingTop="@dimen/space_8"
                             android:paddingEnd="@dimen/space_8"
                             android:paddingBottom="@dimen/space_8"
+                            android:textAllCaps="true"
                             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                            android:textColor="@color/black"/>
+                            android:textColor="@color/black" />
 
                         <TextView
+                            android:id="@+id/tvNext"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center"
                             android:layout_weight="0.3"
-                            android:text="Next"
+                            android:background="@drawable/shape_btn_verification"
+                            android:gravity="center"
+                            android:paddingStart="@dimen/space_8"
                             android:paddingTop="@dimen/space_8"
                             android:paddingEnd="@dimen/space_8"
                             android:paddingBottom="@dimen/space_8"
-                            android:paddingStart="@dimen/space_8"
-                            android:gravity="center"
-                            android:layout_gravity="center"
-                            android:textColor="@color/white"
+                            android:text="Next"
                             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                            android:background="@drawable/shape_btn_verification" />
+                            android:textColor="@color/white" />
 
                     </LinearLayout>
 
