--- a/app/src/main/res/layout/fragment_recommended_base_on_risk_level.xml
+++ b/app/src/main/res/layout/fragment_recommended_base_on_risk_level.xml
@@ -158,14 +158,14 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
             <android.support.constraint.ConstraintLayout
-                android:visibility="@{vm.isFrom==2?View.VISIBLE:View.GONE}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/shape_cart_view"
-                android:elevation="@dimen/space_2"
                 android:layout_marginStart="@dimen/default_space"
                 android:layout_marginTop="@dimen/default_space"
                 android:layout_marginEnd="@dimen/default_space"
+                android:visibility="@{vm.isFrom==2?View.VISIBLE:View.GONE}"
+                android:background="@drawable/shape_cart_view"
+                android:elevation="2dp"
                 android:padding="@dimen/space_8">
 
                 <android.support.v7.widget.CardView
@@ -178,6 +178,7 @@
                     app:cardBackgroundColor="@color/circular_bg"
                     app:cardCornerRadius="72dp"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent">
 
                     <ImageView
@@ -198,8 +199,8 @@
                         android:gravity="center"
                         android:maxLines="2"
                         android:minLines="2"
-                        android:paddingStart="@dimen/space_5"
-                        android:paddingEnd="@dimen/space_5"
+                        android:paddingStart="@dimen/space_8"
+                        android:paddingEnd="@dimen/space_8"
                         android:text="@{vm.secondaryCategoryName}"
                         android:textAllCaps="true"
                         android:textColor="@color/semi_black"
@@ -209,17 +210,79 @@
                 </android.support.v7.widget.CardView>
 
                 <TextView
-                    android:id="@+id/tvGoalValueL"
+                    android:id="@+id/tvRiskLevelSec"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/space_8"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:layout_marginEnd="@dimen/space_8"
+                    android:background="@drawable/shape_risk_level_bg"
+                    android:drawablePadding="@dimen/space_8"
+                    android:fontFamily="@font/lato_semibold"
+                    android:gravity="center_vertical"
+                    android:minWidth="120dp"
+                    android:padding="@dimen/space_8"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/name_aggressive"
+                    app:layout_constraintEnd_toStartOf="@id/glCenter"
+                    app:layout_constraintTop_toBottomOf="@id/view2"
+                    tools:text="High Risk" />
+
+                <TextView
+                    android:id="@+id/tvReturnLevelSec"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/space_8"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:layout_marginEnd="@dimen/space_8"
+                    android:background="@drawable/shape_risk_to_revord_level_bg"
+                    android:drawablePadding="@dimen/space_8"
+                    android:fontFamily="@font/lato_semibold"
+                    android:gravity="center_vertical"
+                    android:minWidth="120dp"
+                    android:padding="@dimen/space_8"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/pdlg_color_green"
+                    app:layout_constraintStart_toStartOf="@id/glCenter"
+                    app:layout_constraintTop_toBottomOf="@id/view2"
+                    tools:text="High Return" />
+
+                <android.support.constraint.Guideline
+                    android:id="@+id/glCenter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.5" />
+
+                <View
+                    android:id="@+id/mDivider"
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:background="@color/lighter_gray"
+                    app:layout_constraintTop_toBottomOf="@id/tvRiskLevelSec" />
+
+                <TextView
+                    android:id="@+id/tvSortDescription"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
-                    android:fontFamily="@font/lato_semibold"
+                    android:lineSpacingExtra="@dimen/space_4"
+                    android:text="@{vm.secondaryCategoryShortDes}"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    app:layout_constraintTop_toBottomOf="@id/mDivider"
+                    tools:text="An aggressive investment strategy involves allocating more money to direct equity, and less money to bonds." />
+
+                <TextView
+                    android:id="@+id/tvDescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
                     android:lineSpacingExtra="@dimen/space_4"
                     android:text="@{vm.secondaryCategoryDes}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                    android:textColor="@color/semi_black"
-                    app:layout_constraintTop_toBottomOf="@+id/view2"
-                    tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting in-dustry. Lorem Ipsum has been the industry's standard dummy text ever since the an unof type and scrambled it to a type specimen book electronic typesetting, remaining essentially unchanged." />
+                    app:layout_constraintTop_toBottomOf="@id/tvSortDescription"
+                    tools:text="An aggressive investment strategy involves allocating more money to direct equity, and less money to bonds." />
 
             </android.support.constraint.ConstraintLayout>
 
@@ -264,6 +327,7 @@
                     android:layout_marginStart="@dimen/space_8"
                     android:layout_marginEnd="@dimen/space_8"
                     android:layout_marginBottom="@dimen/default_space"
+                    android:layout_marginTop="@dimen/space_16"
                     android:fontFamily="@font/lato_semibold"
                     android:background="@drawable/shape_btn_idle_bg"
                     android:elevation="@dimen/space_2"
