--- a/app/src/main/res/layout/page_investment_options_item.xml
+++ b/app/src/main/res/layout/page_investment_options_item.xml
@@ -50,6 +50,7 @@
             android:layout_marginTop="@dimen/default_space"
             android:elevation="12dp"
             app:cardCornerRadius="72dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
@@ -57,16 +58,17 @@
                 android:id="@+id/imageView1"
                 imgUrl="@{invest.categoryImage}"
                 android:layout_width="match_parent"
-                android:adjustViewBounds="true"
                 android:layout_height="match_parent"
-                tools:src="@drawable/ic_aggressive" />
+                android:paddingStart="@dimen/space_8"
+                android:paddingEnd="@dimen/space_8"
+                android:paddingBottom="@dimen/space_40"
+                tools:src="@drawable/own_a_home" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:layout_marginBottom="@dimen/space_16"
-                android:fontFamily="@font/lato_bold"
+                android:layout_marginBottom="@dimen/space_30"
                 android:gravity="center"
                 android:maxLines="2"
                 android:minLines="2"
@@ -76,7 +78,7 @@
                 android:textAllCaps="true"
                 android:textColor="@color/semi_black"
                 android:textSize="@dimen/sp10"
-                tools:text="Aggressive" />
+                tools:text="Children's Education" />
 
         </android.support.v7.widget.CardView>
 
@@ -114,7 +116,7 @@
             android:fontFamily="@font/lato_semibold"
             android:gravity="center_vertical"
             android:minWidth="120dp"
-            android:text="@{invest.returnRisk}"
+            android:text="@{invest.returnLevel}"
             android:padding="@dimen/space_8"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/pdlg_color_green"
