--- a/app/src/main/res/layout/row_section_investment_item.xml
+++ b/app/src/main/res/layout/row_section_investment_item.xml
@@ -12,6 +12,11 @@
         <variable
             name="onViewAll"
             type="android.view.View.OnClickListener" />
+
+        <variable
+            name="isHome"
+            type="boolean" />
+
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -45,6 +50,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvHomeItem"
+            isHome="@{isHome}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
